--- a/filter_library/filter_library.ipynb
+++ b/filter_library/filter_library.ipynb
@@ -9,15 +9,26 @@
    },
    "cell_type": "code",
    "source": [
+    "# create the 'input' folder, and put the library mgf files and tsv files in the folder\n",
+    "# the mgf files should have the same name as the tsv files"
+   ],
+   "id": "ce7bbfaa79c739b2",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from matchms import Spectrum\n",
     "from matchms.similarity import ModifiedCosine"
    ],
-   "id": "ce7bbfaa79c739b2",
-   "outputs": [],
-   "execution_count": 1
+   "id": "2f7cae1cecffebc7"
   },
   {
    "metadata": {
