--- a/generate_smiles/SMILES_generation.ipynb
+++ b/generate_smiles/SMILES_generation.ipynb
@@ -75,6 +75,10 @@
     "\n",
     "def main(input_file, output_file):\n",
     "    df = pd.read_csv(input_file)\n",
+    "    \n",
+    "    # replace '_' with '-' in the 'compound_name' column\n",
+    "    df['compound_name'] = df['compound_name'].str.replace('_', '-')\n",
+    "    \n",
     "    smiles_column = df.iloc[:, 4]\n",
     "    \n",
     "    # Step 1 - Change the number in reagent_ 1 = smiles_column[0:400].tolist() to the number of reactants in your first group of reactants, \n",
