--- a/filter_library/filter_library.ipynb
+++ b/filter_library/filter_library.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-06-14T02:40:52.375799Z",
-     "start_time": "2024-06-14T02:40:50.626856Z"
-    }
+    "collapsed": true
    },
    "source": [
     "\"\"\"\n",
@@ -34,71 +30,15 @@
     "# install the required packages\n",
     "%pip install numpy pandas matchms molmass"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in /Users/shipei/miniconda3/lib/python3.8/site-packages (1.24.3)\r\n",
-      "Requirement already satisfied: pandas in /Users/shipei/miniconda3/lib/python3.8/site-packages (2.0.3)\r\n",
-      "Requirement already satisfied: matchms in /Users/shipei/miniconda3/lib/python3.8/site-packages (0.22.0)\r\n",
-      "Requirement already satisfied: molmass in /Users/shipei/miniconda3/lib/python3.8/site-packages (2023.4.10)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from pandas) (2.8.2)\r\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from pandas) (2024.1)\r\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from pandas) (2023.3)\r\n",
-      "Requirement already satisfied: deprecated<2.0.0,>=1.2.14 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (1.2.14)\r\n",
-      "Collecting lxml<5.0.0,>=4.9.3 (from matchms)\r\n",
-      "  Using cached lxml-4.9.4-cp38-cp38-macosx_11_0_arm64.whl\r\n",
-      "Requirement already satisfied: matplotlib<4.0.0,>=3.7.2 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (3.7.3)\r\n",
-      "Requirement already satisfied: networkx<4.0,>=3.1 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (3.1)\r\n",
-      "Requirement already satisfied: numba<0.58.0,>=0.57.1 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (0.57.1)\r\n",
-      "Requirement already satisfied: pickydict<0.5.0,>=0.4.0 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (0.4.0)\r\n",
-      "Requirement already satisfied: pillow!=9.4.0 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (10.0.1)\r\n",
-      "Requirement already satisfied: pyteomics<5.0,>=4.6 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (4.6.2)\r\n",
-      "Requirement already satisfied: pyyaml<7.0.0,>=6.0.1 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (6.0.1)\r\n",
-      "Requirement already satisfied: rdkit<2024.0.0,>=2023.3.2 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (2023.3.3)\r\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.31.0 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (2.31.0)\r\n",
-      "Requirement already satisfied: scipy<1.11 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (1.10.1)\r\n",
-      "Requirement already satisfied: sparsestack<0.5.0,>=0.4.1 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (0.4.1)\r\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.65.0 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matchms) (4.66.2)\r\n",
-      "Requirement already satisfied: wrapt<2,>=1.10 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from deprecated<2.0.0,>=1.2.14->matchms) (1.15.0)\r\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.7.2->matchms) (1.1.1)\r\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.7.2->matchms) (0.11.0)\r\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.7.2->matchms) (4.42.1)\r\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.7.2->matchms) (1.4.5)\r\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.7.2->matchms) (23.2)\r\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.7.2->matchms) (3.1.1)\r\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.7.2->matchms) (6.0.1)\r\n",
-      "Requirement already satisfied: llvmlite<0.41,>=0.40.0dev0 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from numba<0.58.0,>=0.57.1->matchms) (0.40.1)\r\n",
-      "Requirement already satisfied: importlib-metadata in /Users/shipei/miniconda3/lib/python3.8/site-packages (from numba<0.58.0,>=0.57.1->matchms) (6.8.0)\r\n",
-      "Requirement already satisfied: six>=1.5 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\r\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.31.0->matchms) (2.0.4)\r\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.31.0->matchms) (3.7)\r\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.31.0->matchms) (2.2.1)\r\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.31.0->matchms) (2024.2.2)\r\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /Users/shipei/miniconda3/lib/python3.8/site-packages (from importlib-resources>=3.2.0->matplotlib<4.0.0,>=3.7.2->matchms) (3.17.0)\r\n",
-      "Installing collected packages: lxml\r\n",
-      "  Attempting uninstall: lxml\r\n",
-      "    Found existing installation: lxml 4.8.0\r\n",
-      "    Uninstalling lxml-4.8.0:\r\n",
-      "      Successfully uninstalled lxml-4.8.0\r\n",
-      "Successfully installed lxml-4.9.4\r\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-14T02:42:06.822817Z",
-     "start_time": "2024-06-14T02:42:06.785270Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# load all functions\n",
+    "\n",
     "import os\n",
     "\n",
     "import numpy as np\n",
@@ -113,7 +53,8 @@
     "    Generate metadata dataframe for the mgf file\n",
     "    name_sep: separator for the compound name. eg, 'Phe_CA' -> '_' is the separator\n",
     "    \"\"\"\n",
-    "    with open(f'input/{library_mgf}', 'r') as file:\n",
+    "    mgf_file = os.path.join('input', library_mgf)\n",
+    "    with open(mgf_file, 'r') as file:\n",
     "        spectrum_list = []\n",
     "        db_idx = 1\n",
     "        for line in file:\n",
@@ -217,8 +158,9 @@
     "    print(f'{len(df[\"NAME\"].unique())} compounds in the library')\n",
     "\n",
     "    if write_df:\n",
-    "        out_name = f'output/library_metadata/{df_base_name}_metadata.tsv'\n",
-    "        df.to_csv(out_name, sep='\\t', index=False)\n",
+    "        file_path = os.path.join('output', 'library_metadata')\n",
+    "        file_path = os.path.join(file_path, f'{df_base_name}_metadata.tsv')\n",
+    "        df.to_csv(file_path, sep='\\t', index=False)\n",
     "\n",
     "    # remove cols\n",
     "    df = df.drop(['_ADDUCT', '_NAME', 'db_idx', '_RT', 'NAME_1', 'NAME_2', 'conjugate', '_PEPMASS', 'cmpd_1_prec_int',\n",
@@ -256,7 +198,8 @@
     "    \"\"\"\n",
     "    Write the selected library to a new tsv file\n",
     "    \"\"\"\n",
-    "    lib_tsv = pd.read_csv(f'input/{library_tsv}', sep='\\t')\n",
+    "    file_path = os.path.join('input', library_tsv)\n",
+    "    lib_tsv = pd.read_csv(file_path, sep='\\t')\n",
     "\n",
     "    # all SCANs selected\n",
     "    selected_scans = df[df['selected']]['SCANS'].tolist()\n",
@@ -529,7 +472,8 @@
     "    \"\"\"\n",
     "    Preprocess the compound dataframe, return a dictionary of compound name to precursor mass (M+H)\n",
     "    \"\"\"\n",
-    "    cmpd_df = pd.read_csv(f'input/{library_csv}')\n",
+    "    file_path = os.path.join('input', library_csv)\n",
+    "    cmpd_df = pd.read_csv(file_path)\n",
     "\n",
     "    cmpd_df['prec_mz'] = cmpd_df['formula'].apply(calc_prec_mz)\n",
     "\n",
@@ -555,8 +499,9 @@
     "    if not os.path.exists('output'):\n",
     "        os.makedirs('output')\n",
     "\n",
-    "    if not os.path.exists('output/library_metadata'):\n",
-    "        os.makedirs('output/library_metadata')\n",
+    "    metadata_folder = os.path.join('output', 'library_metadata')\n",
+    "    if not os.path.exists(metadata_folder):\n",
+    "        os.makedirs(metadata_folder)\n",
     "\n",
     "    # list all the files in the input folder\n",
     "    all_files = os.listdir('input')\n",
@@ -570,13 +515,15 @@
     "\n",
     "        # check the existence of the .tsv\n",
     "        library_tsv = base_name + '.tsv'\n",
-    "        if not os.path.exists(f'input/{library_tsv}'):\n",
+    "        file_path = os.path.join('input', library_tsv)\n",
+    "        if not os.path.exists(file_path):\n",
     "            print(f'tsv file missing: {library_tsv} does not exist')\n",
     "            continue\n",
     "\n",
     "        # check the existence of the .csv\n",
     "        library_csv = base_name + '.csv'\n",
-    "        if not os.path.exists(f'input/{library_csv}'):\n",
+    "        file_path = os.path.join('input', library_csv)\n",
+    "        if not os.path.exists(file_path):\n",
     "            print(f'csv file missing: {library_csv} does not exist')\n",
     "            continue\n",
     "        cmpd_df_dict = preprocess_cmpd_df(library_csv)\n",
@@ -587,51 +534,25 @@
     "                            rt_tol=2, ms2_tol_da=0.02, prec_intensity_cutoff=10,\n",
     "                            modcos_score_cutoff=0.6, modcos_peak_cutoff=4, write_df=True)\n",
     "\n",
-    "        out_mgf = 'output/' + base_name + '_filtered.mgf'\n",
+    "        out_mgf = os.path.join('output', base_name + '_filtered.mgf')\n",
     "        write_to_mgf(df, out_mgf)\n",
-    "        out_tsv = 'output/' + base_name + '_filtered.tsv'\n",
-    "        write_tsv(df, library_tsv, out_tsv)\n",
-    "        \n",
-    "    print('All files processed')\n"
+    "        out_tsv = os.path.join('output', base_name + '_filtered.tsv')\n",
+    "        write_tsv(df, library_tsv, out_tsv)\n"
    ],
    "id": "701614cc1dbcc01d",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-14T02:42:14.013396Z",
-     "start_time": "2024-06-14T02:42:09.154101Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# run the main function\n",
     "main()"
    ],
    "id": "374cc90af3812d6a",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing 20240430_IM_BA_new_core_MZMine_libraryoutput_for_GNPS.mgf\n",
-      "6984 spectra in the library\n",
-      "After precursor existence check:\n",
-      "6751 spectra remaining in the library\n",
-      "1637 compounds in the library\n",
-      "After adduct check, ion dependency, mod cos match:\n",
-      "6377 spectra remaining in the library\n",
-      "1637 compounds in the library\n",
-      "After isobaric mass filter (unique adduct existence):\n",
-      "6251 spectra selected from the library\n",
-      "1637 compounds in the library\n",
-      "All files processed\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
