update, filter library

--- a/filter_library/filter_library.ipynb
+++ b/filter_library/filter_library.ipynb
@@ -306,8 +306,9 @@
     "    :return: a list of selected scan numbers, a list of compound:adduct to be removed\n",
     "    \"\"\"\n",
     "    if core_adduct_ls is None:\n",
-    "        core_adduct_ls = ['M+H', 'M-H2O+H', 'M+NH4', 'M-2H2O+H', 'M-H2O+NH4', 'M-2H2O+NH4', '2M+H',\n",
-    "                          '2M-H2O+H', '2M+NH4', '2M-2H2O+H', '2M-H2O+NH4', '2M-2H2O+NH4', 'M-H']\n",
+    "        core_adduct_ls = ['M+H', 'M-H2O+H', 'M+NH4', 'M-2H2O+H', 'M-H2O+NH4', 'M-2H2O+NH4',\n",
+    "                          '2M+H', '2M-H2O+H', '2M+NH4', '2M-2H2O+H', '2M-H2O+NH4', '2M-2H2O+NH4',\n",
+    "                          'M-H', 'M+2H', 'M-H2O+2H', 'M-2H2O+2H']\n",
     "\n",
     "    # create a ModifiedCosine object\n",
     "    modified_cosine = ModifiedCosine(tolerance=ms2_tol_da)\n",
@@ -370,6 +371,14 @@
     "                allowed_adducts.remove('M-3H2O+H')\n",
     "        if 'M-3H2O+H' in unique_adducts and 'M-2H2O+H' not in unique_adducts and 'M+H' in unique_adducts:\n",
     "            allowed_adducts.remove('M-3H2O+H')\n",
+    "\n",
+    "        if 'M-2H2O+2H' in unique_adducts and 'M-H2O+2H' not in unique_adducts and 'M+2H' in unique_adducts:\n",
+    "            allowed_adducts.remove('M-2H2O+2H')\n",
+    "            if 'M-3H2O+2H' in allowed_adducts:\n",
+    "                allowed_adducts.remove('M-3H2O+2H')\n",
+    "        if 'M-3H2O+2H' in unique_adducts and 'M-2H2O+2H' not in unique_adducts and 'M+2H' in unique_adducts:\n",
+    "            allowed_adducts.remove('M-3H2O+2H')\n",
+    "\n",
     "        if 'M-2H2O+NH4' in unique_adducts and 'M-H2O+NH4' not in unique_adducts and 'M-2H2O+H' not in unique_adducts:\n",
     "            allowed_adducts.remove('M-2H2O+NH4')\n",
     "            if 'M-3H2O+NH4' in allowed_adducts:\n",
@@ -407,6 +416,14 @@
     "                allowed_adducts.remove('2M-3H2O+H')\n",
     "        if '2M-3H2O+H' in unique_adducts and '2M-2H2O+H' not in unique_adducts and '2M+H' in unique_adducts:\n",
     "            allowed_adducts.remove('2M-3H2O+H')\n",
+    "\n",
+    "        if '2M-2H2O+2H' in unique_adducts and '2M-H2O+2H' not in unique_adducts and '2M+2H' in unique_adducts:\n",
+    "            allowed_adducts.remove('2M-2H2O+2H')\n",
+    "            if '2M-3H2O+2H' in allowed_adducts:\n",
+    "                allowed_adducts.remove('2M-3H2O+2H')\n",
+    "        if '2M-3H2O+2H' in unique_adducts and '2M-2H2O+2H' not in unique_adducts and '2M+2H' in unique_adducts:\n",
+    "            allowed_adducts.remove('2M-3H2O+2H')\n",
+    "\n",
     "        if '2M-2H2O+NH4' in unique_adducts and '2M-H2O+NH4' not in unique_adducts and '2M-2H2O+H' not in unique_adducts:\n",
     "            allowed_adducts.remove('2M-2H2O+NH4')\n",
     "            if '2M-3H2O+NH4' in allowed_adducts:\n",
