update, filter library

--- a/filter_library/filter_library.ipynb
+++ b/filter_library/filter_library.ipynb
@@ -135,8 +135,8 @@
     "\n",
     "    print(f'{df.shape[0]} spectra in the library')\n",
     "    print('After precursor existence check:')\n",
-    "    print(f'{df[\"selected\"].sum()} spectra remaining in the library')\n",
-    "    print(f'{len(df[\"NAME\"].unique())} compounds in the library')\n",
+    "    print(f'{df[\"selected\"].sum()} spectra remaining')\n",
+    "    print(f'{len(df[\"NAME\"][df[\"selected\"]].unique())} compounds')\n",
     "\n",
     "    # core adduct check\n",
     "    discarded_scan_ls, cmpd_adduct_to_be_removed_dict = core_adduct_check(df, core_adduct_ls=core_adduct_ls,\n",
@@ -147,15 +147,15 @@
     "    df.loc[df['db_idx'].isin(discarded_scan_ls), 'discard_reason'] = 'core_adduct_check'\n",
     "\n",
     "    print('After adduct check, ion dependency, mod cos match:')\n",
-    "    print(f'{df[\"selected\"].sum()} spectra remaining in the library')\n",
-    "    print(f'{len(df[\"NAME\"].unique())} compounds in the library')\n",
+    "    print(f'{df[\"selected\"].sum()} spectra remaining')\n",
+    "    print(f'{len(df[\"NAME\"][df[\"selected\"]].unique())} compounds')\n",
     "\n",
     "    # remove spectra, indicated by cmpd_adduct_to_be_removed_dict\n",
     "    df = isobaric_mass_adduct_check(df, cmpd_adduct_to_be_removed_dict)\n",
     "\n",
     "    print('After isobaric mass filter (unique adduct existence):')\n",
-    "    print(f'{df[\"selected\"].sum()} spectra selected from the library')\n",
-    "    print(f'{len(df[\"NAME\"].unique())} compounds in the library')\n",
+    "    print(f'{df[\"selected\"].sum()} spectra selected')\n",
+    "    print(f'{len(df[\"NAME\"][df[\"selected\"]].unique())} compounds')\n",
     "\n",
     "    if write_df:\n",
     "        file_path = os.path.join('output', 'library_metadata')\n",
