add formula if missing

--- a/filter_library/filter_library.ipynb
+++ b/filter_library/filter_library.ipynb
@@ -28,7 +28,7 @@
     "\"\"\"\n",
     "\n",
     "# install the required packages\n",
-    "%pip install numpy pandas matchms molmass"
+    "%pip install numpy pandas matchms molmass rdkit"
    ],
    "outputs": [],
    "execution_count": null
@@ -37,8 +37,6 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# load all functions\n",
-    "\n",
     "import os\n",
     "\n",
     "import numpy as np\n",
@@ -46,7 +44,10 @@
     "from matchms import Spectrum\n",
     "from matchms.similarity import ModifiedCosine\n",
     "from molmass import Formula\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import rdMolDescriptors\n",
     "\n",
+    "# load all functions\n",
     "\n",
     "def generate_library_df(library_mgf, name_sep='_'):\n",
     "    \"\"\"\n",
@@ -492,12 +493,33 @@
     "    file_path = os.path.join('input', library_csv)\n",
     "    cmpd_df = pd.read_csv(file_path)\n",
     "\n",
+    "    # rename column 'SMILES' to 'smiles'\n",
+    "    if 'SMILES' in cmpd_df.columns:\n",
+    "        cmpd_df = cmpd_df.rename(columns={'SMILES': 'smiles'})\n",
+    "\n",
+    "    # check if 'formula' column exists\n",
+    "    if 'formula' not in cmpd_df.columns:\n",
+    "        print('formula column missing, converting SMILES to formula')\n",
+    "        cmpd_df['formula'] = cmpd_df['smiles'].apply(smiles_to_formula)\n",
+    "\n",
     "    cmpd_df['prec_mz'] = cmpd_df['formula'].apply(calc_prec_mz)\n",
     "\n",
     "    # dictionary of mapping name to precursor mass\n",
     "    cmpd_df_dict = cmpd_df.set_index('compound_name')['prec_mz'].to_dict()\n",
     "\n",
     "    return cmpd_df_dict\n",
+    "\n",
+    "\n",
+    "def smiles_to_formula(smiles):\n",
+    "    # Convert SMILES to a molecule object\n",
+    "    mol = Chem.MolFromSmiles(smiles)\n",
+    "\n",
+    "    if mol:\n",
+    "        # Get the molecular formula\n",
+    "        formula = rdMolDescriptors.CalcMolFormula(mol)\n",
+    "        return formula\n",
+    "    else:\n",
+    "        return None\n",
     "\n",
     "\n",
     "def calc_prec_mz(formula):\n",
