write mgf update

--- a/filter_library/filter_library.ipynb
+++ b/filter_library/filter_library.ipynb
@@ -176,7 +176,7 @@
     "    \"\"\"\n",
     "    df = df[df['selected']].reset_index(drop=True)\n",
     "    # remove cols\n",
-    "    df = df.drop(['selected'], axis=1)\n",
+    "    df = df.drop(['selected', 'OTHER_MATCHED_COMPOUNDS', 'OTHER_MATCHED_COMPOUNDS_NAMES', 'SPECTYPE'], axis=1)\n",
     "    # move cols mz_ls and intensity_ls to the end\n",
     "    df = df[[col for col in df.columns if col not in ['Num peaks', 'mz_ls', 'intensity_ls']] + ['Num peaks', 'mz_ls',\n",
     "                                                                                                'intensity_ls']]\n",
