--- a/filter_library/filter_library.ipynb
+++ b/filter_library/filter_library.ipynb
@@ -182,7 +182,7 @@
     "                                                                                                'intensity_ls']]\n",
     "\n",
     "    with open(out_mgf, 'w') as file:\n",
-    "        scan_idx = 1\n",
+    "        # scan_idx = 1\n",
     "        for idx, row in df.iterrows():\n",
     "            file.write('BEGIN IONS\\n')\n",
     "            for key, value in row.items():\n",
@@ -191,14 +191,14 @@
     "                        file.write(f'{mz} {intensity}\\n')\n",
     "                elif key == 'intensity_ls':\n",
     "                    continue\n",
-    "                elif key == 'SCANS':\n",
-    "                    file.write(f'SCANS={scan_idx}\\n')\n",
-    "                elif key == 'FEATURE_ID':\n",
-    "                    file.write(f'FEATURE_ID={value}\\n')\n",
+    "                # elif key == 'SCANS':\n",
+    "                #     file.write(f'SCANS={scan_idx}\\n')\n",
+    "                # elif key == 'FEATURE_ID':\n",
+    "                #     file.write(f'FEATURE_ID={value}\\n')\n",
     "                else:\n",
     "                    file.write(f'{key}={value}\\n')\n",
     "            file.write('END IONS\\n\\n')\n",
-    "            scan_idx += 1\n",
+    "            # scan_idx += 1\n",
     "\n",
     "\n",
     "def write_tsv(df, library_tsv, out_tsv):\n",
@@ -214,8 +214,12 @@
     "    # reserve lib_tsv with selected scans in 'EXTRACTSCAN' column\n",
     "    lib_tsv = lib_tsv[lib_tsv['EXTRACTSCAN'].astype(str).isin(selected_scans)]\n",
     "\n",
-    "    # fill 'EXTRACTSCAN' column with 1 to length of lib_tsv\n",
-    "    lib_tsv['EXTRACTSCAN'] = range(1, lib_tsv.shape[0] + 1)\n",
+    "    # # fill 'EXTRACTSCAN' column with 1 to length of lib_tsv\n",
+    "    # lib_tsv['EXTRACTSCAN'] = range(1, lib_tsv.shape[0] + 1)\n",
+    "\n",
+    "    # FILENAME\n",
+    "    lib_tsv['FILENAME'] = lib_tsv['FILENAME'].apply(lambda x: x.split('.mgf')[0] + '_filtered.mgf')\n",
+    "\n",
     "    lib_tsv.to_csv(out_tsv, sep='\\t', index=False, na_rep='N/A')\n",
     "\n",
     "\n",
