remove doubly charged adducts

--- a/filter_library/filter_library.ipynb
+++ b/filter_library/filter_library.ipynb
@@ -119,6 +119,16 @@
     "    df['selected'] = [True] * df.shape[0]\n",
     "    df['discard_reason'] = [None] * df.shape[0]\n",
     "\n",
+    "    # remove doubly charged adduct\n",
+    "    _doubly_charged_adducts = df['ADDUCT'].str.contains(r'\\]+2', regex=True)\n",
+    "    df.loc[_doubly_charged_adducts, 'selected'] = False\n",
+    "    df.loc[_doubly_charged_adducts, 'discard_reason'] = 'doubly_charged_adduct'\n",
+    "\n",
+    "    print(f'{df.shape[0]} spectra in the library')\n",
+    "    print('After removing doubly charged adducts:')\n",
+    "    print(f'{df[\"selected\"].sum()} spectra remaining')\n",
+    "    print(f'{len(df[\"NAME\"][df[\"selected\"]].unique())} compounds')\n",
+    "\n",
     "    # convert to float\n",
     "    df['RTINSECONDS'] = df['RTINSECONDS'].astype(float)\n",
     "    df['PEPMASS'] = df['PEPMASS'].astype(float)\n",
@@ -128,13 +138,15 @@
     "    df['_PEPMASS'] = df['PEPMASS'].apply(lambda x: round(x, 3))\n",
     "\n",
     "    # filter spectra, indicated by precursor existence\n",
+    "    df['cmpd_1_prec_int'] = [None] * df.shape[0]\n",
+    "    df['cmpd_2_prec_int'] = [None] * df.shape[0]\n",
+    "    df['max_prec_int'] = [0] * df.shape[0]\n",
     "    discarded_scan_ls = precursor_check(df, cmpd_df_dict,\n",
     "                                        ms2_tol_da=ms2_tol_da,\n",
     "                                        prec_intensity_cutoff=prec_intensity_cutoff)\n",
     "    df.loc[df['db_idx'].isin(discarded_scan_ls), 'selected'] = False\n",
     "    df.loc[df['db_idx'].isin(discarded_scan_ls), 'discard_reason'] = 'precursor_check'\n",
     "\n",
-    "    print(f'{df.shape[0]} spectra in the library')\n",
     "    print('After precursor existence check:')\n",
     "    print(f'{df[\"selected\"].sum()} spectra remaining')\n",
     "    print(f'{len(df[\"NAME\"][df[\"selected\"]].unique())} compounds')\n",
@@ -228,10 +240,10 @@
     "    precursor existence check\n",
     "    this is to remove the spectra that are labeled incorrectly (one spectrum being selected multiple times)\n",
     "    \"\"\"\n",
-    "    df['cmpd_1_prec_int'] = [None] * df.shape[0]\n",
-    "    df['cmpd_2_prec_int'] = [None] * df.shape[0]\n",
-    "    df['max_prec_int'] = [0] * df.shape[0]\n",
+    "\n",
     "    for idx, row in df.iterrows():\n",
+    "        if not row['selected']:\n",
+    "            continue\n",
     "        if not row['conjugate']:\n",
     "            continue\n",
     "        if row['OTHER_MATCHED_COMPOUNDS'] is None:\n",
