remove nearly identical spec

--- a/filter_library/filter_library.ipynb
+++ b/filter_library/filter_library.ipynb
@@ -47,8 +47,6 @@
     "from rdkit import Chem\n",
     "from rdkit.Chem import rdMolDescriptors\n",
     "\n",
-    "# load all functions\n",
-    "\n",
     "def generate_library_df(library_mgf, name_sep='_'):\n",
     "    \"\"\"\n",
     "    Generate metadata dataframe for the mgf file\n",
@@ -109,7 +107,7 @@
     "\n",
     "def select_library(df, cmpd_df_dict, df_base_name, core_adduct_ls=None, rt_tol=2,\n",
     "                   ms2_tol_da=0.02, prec_intensity_cutoff=10,\n",
-    "                   modcos_score_cutoff=0.6, modcos_peak_cutoff=4,\n",
+    "                   modcos_score_cutoff=0.6, modcos_peak_cutoff=4, cos_score_cutoff=0.95,\n",
     "                   write_df=False):\n",
     "    \"\"\"\n",
     "    Filter the library based on core adduct list, ion dependency, modcos match, and isobaric mass check\n",
@@ -119,6 +117,7 @@
     "    df['selected'] = [True] * df.shape[0]\n",
     "    df['discard_reason'] = [None] * df.shape[0]\n",
     "\n",
+    "    ##########################################\n",
     "    # remove doubly charged adduct\n",
     "    _doubly_charged_adducts = df['ADDUCT'].str.contains(r'\\]+2', regex=True)\n",
     "    df.loc[_doubly_charged_adducts, 'selected'] = False\n",
@@ -137,6 +136,7 @@
     "    # bin the PEPMASS\n",
     "    df['_PEPMASS'] = df['PEPMASS'].apply(lambda x: round(x, 3))\n",
     "\n",
+    "    ##########################################\n",
     "    # filter spectra, indicated by precursor existence\n",
     "    df['cmpd_1_prec_int'] = [None] * df.shape[0]\n",
     "    df['cmpd_2_prec_int'] = [None] * df.shape[0]\n",
@@ -151,6 +151,7 @@
     "    print(f'{df[\"selected\"].sum()} spectra remaining')\n",
     "    print(f'{len(df[\"NAME\"][df[\"selected\"]].unique())} compounds')\n",
     "\n",
+    "    ##########################################\n",
     "    # core adduct check\n",
     "    discarded_scan_ls, cmpd_adduct_to_be_removed_dict = core_adduct_check(df, core_adduct_ls=core_adduct_ls,\n",
     "                                                                          ms2_tol_da=ms2_tol_da,\n",
@@ -163,10 +164,19 @@
     "    print(f'{df[\"selected\"].sum()} spectra remaining')\n",
     "    print(f'{len(df[\"NAME\"][df[\"selected\"]].unique())} compounds')\n",
     "\n",
+    "    ##########################################\n",
     "    # remove spectra, indicated by cmpd_adduct_to_be_removed_dict\n",
     "    df = isobaric_mass_adduct_check(df, cmpd_adduct_to_be_removed_dict)\n",
     "\n",
     "    print('After isobaric mass filter (unique adduct existence):')\n",
+    "    print(f'{df[\"selected\"].sum()} spectra selected')\n",
+    "    print(f'{len(df[\"NAME\"][df[\"selected\"]].unique())} compounds')\n",
+    "\n",
+    "    ##########################################\n",
+    "    # remove almost identical spectra\n",
+    "    df = remove_identical_spectra(df, ms2_tol_da=ms2_tol_da, cos_score_cutoff=cos_score_cutoff)\n",
+    "\n",
+    "    print('After removing almost identical spectra:')\n",
     "    print(f'{df[\"selected\"].sum()} spectra selected')\n",
     "    print(f'{len(df[\"NAME\"][df[\"selected\"]].unique())} compounds')\n",
     "\n",
@@ -180,6 +190,54 @@
     "                  'cmpd_2_prec_int', 'max_prec_int', 'discard_reason'], axis=1)\n",
     "\n",
     "    return df\n",
+    "\n",
+    "\n",
+    "def remove_identical_spectra(df, ms2_tol_da=0.02, cos_score_cutoff=0.95):\n",
+    "    \"\"\"\n",
+    "    Remove almost identical spectra\n",
+    "    \"\"\"\n",
+    "    # sort df by NAME and ADDUCT\n",
+    "    df = df.sort_values(['NAME', 'ADDUCT'])\n",
+    "\n",
+    "    # Group by NAME and ADDUCT\n",
+    "    for (name, adduct), group in df.groupby(['NAME', 'ADDUCT']):\n",
+    "        # Sort group by precursor_purity from high to low\n",
+    "        group = group.sort_values('PRECURSOR_PURITY', ascending=False).reset_index(drop=True)\n",
+    "\n",
+    "        for i in range(1, len(group)):\n",
+    "            if group.loc[i, 'selected']:\n",
+    "                for j in range(i):\n",
+    "                    if group.loc[j, 'selected']:\n",
+    "                        # Compare spectra\n",
+    "                        score = compare_spectra_cos(group.iloc[j], group.iloc[i], ms2_tol_da)\n",
+    "                        if score > cos_score_cutoff:\n",
+    "                            group.loc[i, 'selected'] = False\n",
+    "                            group.loc[i, 'discard_reason'] = 'almost_identical_spectrum'\n",
+    "                            break\n",
+    "\n",
+    "        # Update the original DataFrame\n",
+    "        df.loc[group.index, 'selected'] = group['selected']\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def compare_spectra_cos(spec1, spec2, ms2_tol_da=0.02):\n",
+    "    \"\"\"\n",
+    "    Compare two spectra using cosine similarity\n",
+    "    \"\"\"\n",
+    "    # Create Spectrum objects\n",
+    "    spectrum1 = Spectrum(mz=np.array(spec1['mz_ls']),\n",
+    "                         intensities=np.array(spec1['intensity_ls']),\n",
+    "                         metadata={'precursor_mz': spec1['PEPMASS']})\n",
+    "    spectrum2 = Spectrum(mz=np.array(spec2['mz_ls']),\n",
+    "                         intensities=np.array(spec2['intensity_ls']),\n",
+    "                         metadata={'precursor_mz': spec2['PEPMASS']})\n",
+    "\n",
+    "    # Calculate cosine similarity\n",
+    "    cos_greedy = CosineGreedy(tolerance=ms2_tol_da)\n",
+    "    score = cos_greedy.pair(spectrum1, spectrum2)\n",
+    "\n",
+    "    return score['score']\n",
     "\n",
     "\n",
     "def write_to_mgf(df, out_mgf):\n",
@@ -596,7 +654,8 @@
     "        df = generate_library_df(library_mgf, name_sep)\n",
     "        df = select_library(df, cmpd_df_dict, base_name,\n",
     "                            rt_tol=2, ms2_tol_da=0.02, prec_intensity_cutoff=10,\n",
-    "                            modcos_score_cutoff=0.6, modcos_peak_cutoff=4, write_df=True)\n",
+    "                            modcos_score_cutoff=0.6, modcos_peak_cutoff=4, cos_score_cutoff=0.95,\n",
+    "                            write_df=True)\n",
     "\n",
     "        out_mgf = os.path.join('output', base_name + '_filtered.mgf')\n",
     "        write_to_mgf(df, out_mgf)\n",
