remove doubly charged adducts

--- a/filter_library/filter_library.ipynb
+++ b/filter_library/filter_library.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "    ##########################################\n",
     "    # remove doubly charged adduct\n",
-    "    _doubly_charged_adducts = df['ADDUCT'].str.contains(r'\\]+2', regex=True)\n",
+    "    _doubly_charged_adducts = df['ADDUCT'].str.contains(r'\\][\\s]*[+]?2|2[+]', regex=True)\n",
     "    df.loc[_doubly_charged_adducts, 'selected'] = False\n",
     "    df.loc[_doubly_charged_adducts, 'discard_reason'] = 'doubly_charged_adduct'\n",
     "\n",
@@ -654,7 +654,8 @@
     "        df = generate_library_df(library_mgf, name_sep)\n",
     "        df = select_library(df, cmpd_df_dict, base_name,\n",
     "                            rt_tol=2, ms2_tol_da=0.02, prec_intensity_cutoff=10,\n",
-    "                            modcos_score_cutoff=0.6, modcos_peak_cutoff=4, cos_score_cutoff=0.95,\n",
+    "                            modcos_score_cutoff=0.6, modcos_peak_cutoff=4,\n",
+    "                            cos_score_cutoff=0.95,\n",
     "                            write_df=True)\n",
     "\n",
     "        out_mgf = os.path.join('output', base_name + '_filtered.mgf')\n",
