--- a/filter_library/filter_library.ipynb
+++ b/filter_library/filter_library.ipynb
@@ -42,7 +42,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from matchms import Spectrum\n",
-    "from matchms.similarity import ModifiedCosine\n",
+    "from matchms.similarity import ModifiedCosine, CosineGreedy\n",
     "from molmass import Formula\n",
     "from rdkit import Chem\n",
     "from rdkit.Chem import rdMolDescriptors\n",
