update, remove identical spectrum now works well

--- a/filter_library/filter_library.ipynb
+++ b/filter_library/filter_library.ipynb
@@ -200,11 +200,15 @@
     "    # sort df by NAME and ADDUCT\n",
     "    df = df.sort_values(['NAME', 'ADDUCT'])\n",
     "\n",
+    "    # Create a copy of the dataframe to store updates\n",
+    "    df_updated = df.copy()\n",
+    "\n",
     "    # Group by NAME and ADDUCT\n",
     "    for (name, adduct), group in df.groupby(['NAME', 'ADDUCT']):\n",
-    "        # Sort group by precursor_purity from high to low\n",
-    "        group = group.sort_values('PRECURSOR_PURITY', ascending=False).reset_index(drop=True)\n",
+    "        # Sort group by precursor_purity from high to low and reset index\n",
+    "        group = group.sort_values('PRECURSOR_PURITY', ascending=False).reset_index()\n",
     "\n",
+    "        # Iterate through the group\n",
     "        for i in range(1, len(group)):\n",
     "            if group.loc[i, 'selected']:\n",
     "                for j in range(i):\n",
@@ -212,14 +216,16 @@
     "                        # Compare spectra\n",
     "                        score = compare_spectra_cos(group.iloc[j], group.iloc[i], ms2_tol_da)\n",
     "                        if score > cos_score_cutoff:\n",
-    "                            group.loc[i, 'selected'] = False\n",
-    "                            group.loc[i, 'discard_reason'] = 'almost_identical_spectrum'\n",
+    "                            # Use the original index to update df_updated\n",
+    "                            original_idx = group.loc[i, 'index']\n",
+    "                            df_updated.loc[original_idx, 'selected'] = False\n",
+    "                            df_updated.loc[original_idx, 'discard_reason'] = 'almost_identical_spectrum'\n",
     "                            break\n",
     "\n",
-    "        # Update the original DataFrame\n",
-    "        df.loc[group.index, 'selected'] = group['selected']\n",
+    "    return df_updated\n",
     "\n",
-    "    return df\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "def compare_spectra_cos(spec1, spec2, ms2_tol_da=0.02):\n",
